[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conda-env-executor"
version = "0.1.1"
description = "Execute Python code in isolated conda environments with efficient data passing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Wei Ouyang", email = "oeway007@gmail.com" },
]
dependencies = [
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "conda-pack>=0.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.24",  # for testing numpy array passing
]
dev = [
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["conda_env_executor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=conda_env_executor"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.codespell]
# note: pre-commit passes explicit lists of files here, which this skip file list doesn't override -
# this is only to allow you to run codespell interactively
skip = "./.git,./.github"
# ignore short words, and typename parameters like OffsetT
ignore-regex = "\\b(.{1,4}|[A-Z]\\w*T)\\b"
# use the 'clear' dictionary for unambiguous spelling mistakes
builtin = "clear"
# disable warnings about binary files and wrong encoding
quiet-level = 3
